Adds some prompts that I had forgetten to save?

--- a/prompts/2025-03-05.md
+++ b/prompts/2025-03-05.md
@@ -63,3 +63,22 @@ A few issues:
 instead of
 2023-06-01_12-59-20_i0.jpg,0,RC,T40,SPRAY,PROP,
 * Git diff still shows tons of `^M` carriage returns, one for each line that has changed.
+
+Something is very wrong. Now, when I try to add labels SPRAY, PROP, FLIGHT, BATT, OTHER to an image, the GUI throws this warning: `These labels can only be selected when RC is selected`. But all the images already have RC selected, because they all have the label RC.
+
+Again, same problems I described before. 
+* You are re-writing the entire CSV file, losing track of changes.
+* Again with the `^M` carriage returns.
+
+Problems persist.
+* 2023-05-12_08-57-23_i0.jpg,0,RC,T40,"SPRAY,PROP" instead of 2023-05-12_08-57-23_i0.jpg,0,RC,T40,SPRAY,PROP
+* Running git diff shows the entire CSV file being re-written, losing track of changes.
+* I restarted the computer and not git diff now does not show any `^M` carriage returns. This is weird. But whatever.
+
+* Key bindings stopped working.
+* AGAIN THE SAME THING. Running git diff shows the entire CSV file being re-written, losing track of changes. HOW HARD IS THIS TO FIX?
+
+It seems like the reason the entire CSV file is being re-written is because the script is adding an extra comma to the end of each line even when the corresponding image label does not change.
+
+The issue persists.
+Example: 2023-05-16_21-23-15_i0.jpg,0,RC,T40, -> 2023-05-16_21-23-15_i0.jpg,0,RC,T40,, (notice the extra comma)
