--- a/agent_dev_s1.ipynb
+++ b/agent_dev_s1.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ebff1563-0905-427a-89af-6fe5c75c678a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from base64 import b64encode\n",
-    "from constants import DIR_AGENT_PROMPTS\n",
-    "from constants import AGENT_PROMPTS\n",
+    "from abc_project_vars import DIR_AGENT_PROMPTS\n",
+    "from abc_project_vars import PROMPT_FILES\n",
     "from mistralai import Mistral\n",
     "from utilities_io import load_file_as_string"
    ]
